--- a/package.json
+++ b/package.json
@@ -19,40 +19,40 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^1.3.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-hot-loader": "^4.3.3",
+    "@material-ui/core": "^3.1.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-hot-loader": "^4.3.11",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.51",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
-    "@babel/preset-react": "^7.0.0-beta.51",
-    "@babel/preset-typescript": "^7.0.0-beta.51",
-    "@types/react": "^16.4.4",
-    "@types/react-dom": "^16.0.6",
-    "@types/react-redux": "^6.0.2",
-    "@types/react-router-dom": "^4.2.7",
-    "babel-loader": "^8.0.0-beta.3",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router-dom": "^4.3.1",
+    "babel-loader": "^8.0.2",
     "connect-history-api-fallback": "^1.5.0",
-    "fork-ts-checker-webpack-plugin": "^0.4.2",
-    "ghooks": "^2.0.4",
+    "fork-ts-checker-webpack-plugin": "^0.4.9",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.0.0",
     "koa-connect": "^2.0.1",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.5",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.1",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.6",
-    "webpack-serve": "^1.0.4"
+    "typescript": "^3.0.3",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-serve": "^2.0.2"
   }
 }
