--- a/package.json
+++ b/package.json
@@ -39,14 +39,19 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.9",
     "@types/react-router-dom": "^4.3.1",
+    "antd": "^3.9.3",
     "babel-loader": "^8.0.2",
+    "babel-plugin-import": "^1.9.1",
     "connect-history-api-fallback": "^1.5.0",
+    "css-loader": "^1.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0",
+    "immutable": "^3.7.4",
     "koa-connect": "^2.0.1",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
+    "style-loader": "^0.23.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
