--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
     "files.trimFinalNewlines": true,
-    "editor.formatOnSave": true
+    "[typescript]": {
+      "editor.formatOnSave": true,
+    },
+    "[typescriptreact]": {
+      "editor.formatOnSave": true,
+    },
+    "[javascript]": {
+      "editor.formatOnSave": true,
+    }
 }
