--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-hot-loader": "^4.3.11",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "styled-components": "^3.4.9"
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
@@ -39,15 +38,12 @@
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.9",
     "@types/react-router-dom": "^4.3.1",
-    "antd": "^3.9.3",
     "babel-loader": "^8.0.2",
-    "babel-plugin-import": "^1.9.1",
     "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^1.0.0",
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.0.0",
-    "immutable": "^3.7.4",
     "koa-connect": "^2.0.1",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
